--- a/ModularKitchenUnit.css
+++ b/ModularKitchenUnit.css
@@ -2,6 +2,7 @@
 
 .section-container {
     padding: 20px;
+    margin-top: 100px;
 }
 
 h2 {
@@ -17,10 +18,10 @@ h3 {
 }
 
 .image-container {
+    margin-top: -100px;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 20px; /* Adjust margin-bottom as needed */
+    justify-content: centre;
+    margin-bottom: 25px;
 }
 
 .service-img {
