--- a/ClientL.css
+++ b/ClientL.css
@@ -6,7 +6,22 @@ body {
     padding-top: 200px; /* Ensure content starts below fixed navbar */
     display: flex;
 }
+.form-group {
+    margin-bottom: 15px;
+}
 
+.btn-primary {
+    margin-top: 10px; /* Adjust spacing between buttons */
+}
+
+.btn-link {
+    margin-top: 5px; /* Adjust spacing between buttons */
+}
+
+.error {
+    color: red;
+    margin-top: 10px;
+}
 
 h1 {
     font-size: 36px;
@@ -112,7 +127,8 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    margin-top: -50px;
+    margin-top: -75px;
+    margin-bottom: 50px;
 }
 
 .clientsignup-container {
