--- a/Contact.css
+++ b/Contact.css
@@ -45,7 +45,7 @@
 
 .submit-button {
     padding: 10px;
-    background-color: #007bff;
+    background-color: black;
     color: white;
     border: none;
     border-radius: 4px;
@@ -55,5 +55,5 @@
 }
 
 .submit-button:hover {
-    background-color: #0056b3;
+    background-color: black;
 }
